@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.529 2005/12/13 02:06:36 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.530 2005/12/13 02:37:15 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -10,6 +10,9 @@
   call generated code in a function
   src/net/server/html/webgli/*:
   include top/bottom
+  src/GLIArchitectureTemplate.py, src/GLIClientController.py,
+  src/GLIClientCongifuration.py:
+  install mode magic
 
   11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
